--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   
 
-  <body data-sidebar-position="left" data-sidebar-behavior="fixed">
+  <body data-sidebar-position="left" data-sidebar-behavior="sticky">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
